#305:FlacTagWriter should use ShiftData like Mp4 and MP3 so only needs enough memory to store one chunk
#301:In Mp3 when metadata becomes shorter we dont reclaim the space instead just left as padding
#209:Write chunk size property not observed
#309:Tag edition fails for m4a file - and corrupts tag
#308:corrupt audio files after fix
#316:NullPointerException at org.jaudiotagger.tag.mp4.field.Mp4GenreField
#317:VorbisComment:ArrayIndexOutOfBoundsException: arraycopy
#318:Flac, handle image pictures where the data length is greater than recorded in header
#320:Wav code for checking incorrectly aligned 'id3 ' chunks incorrectly assumes the following/precding byte will be null
#321:Ensure that when reading an mp4 box header, we have at least enough data in the file to actually read the header, if there is less data, ignore it and log a warning.
#322:Problems writing metadata for DSF files larger than 2GB
#329:Add support for Roon fields (and also SONGKONG_ID for SongKong)

2.2.5
#033:Added getAudioStartPos() and getAudioEndPos() methods to AudioHeader interface and implemented for most formats
#036:Added getNoSamples() to AudioHeader interface
#040:If ID3 frame marked as UTF-16 but has no BOM we now look to see if first byte contains data or not, if doesn't likely to be BE otherwise LE
#041:Fix equality checks for tags so based on contents not simple identity check
#061:Ensure if you try and set a field value to null an IllegalArgumentException will be thrown for all formats
#049:Mp4 now able to write file with udta atom plus unknown subatoms as well as meta atom
#077:Added support writing Aiff artwork
#078:Track length not being calculated in for Wav files
#079:Aiff Bitrate not calculated correctly
#481:Fixed handling of an empty FrameBodyTDAT frame preventing reading of valid TYER frame

2.2.4
Added support for reading/writing Aiff and Wav metadata
Now requires Java 1.7
Added support for deploying versions to bintray