@@ -130,7 +130,7 @@ public enum FieldKey
     ORCHESTRA,
     ORCHESTRA_SORT,
     ORIGINAL_ALBUM,
-    ORIGINAL_ALBUM_YEAR,
+    ORIGINALRELEASEDATE,
     ORIGINAL_ARTIST,
     ORIGINAL_LYRICIST,
     ORIGINAL_YEAR,
