@@ -121,7 +121,7 @@ public enum ID3v24FieldKey
     ORCHESTRA(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.ORCHESTRA, Id3FieldType.TEXT),
     ORCHESTRA_SORT(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.ORCHESTRA_SORT, Id3FieldType.TEXT),
     ORIGINAL_ALBUM(ID3v24Frames.FRAME_ID_ORIG_TITLE, Id3FieldType.TEXT),
-    ORIGINAL_ALBUM_YEAR(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.ORIGINAL_ALBUM_YEAR, Id3FieldType.TEXT),
+    ORIGINALRELEASEDATE(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.ORIGINALRELEASEDATE, Id3FieldType.TEXT),
     ORIGINAL_ARTIST(ID3v24Frames.FRAME_ID_ORIGARTIST, Id3FieldType.TEXT),
     ORIGINAL_LYRICIST(ID3v24Frames.FRAME_ID_ORIG_LYRICIST, Id3FieldType.TEXT),
     ORIGINAL_YEAR(ID3v24Frames.FRAME_ID_ORIGINAL_RELEASE_TIME, Id3FieldType.TEXT),
