@@ -130,7 +130,7 @@ public class FrameBodyTXXX extends AbstractFrameBodyTextInfo implements ID3v24Fr
     public static final String OPUS                                     = "OPUS";
     public static final String ORCHESTRA                                = "ORCHESTRA";
     public static final String ORCHESTRA_SORT                           = "ORCHESTRA_SORT";
-    public static final String ORIGINAL_ALBUM_YEAR                      = "ORIGINAL_ALBUM_YEAR";
+    public static final String ORIGINALRELEASEDATE                      = "ORIGINALRELEASEDATE";
     public static final String OVERALL_WORK                             = "OVERALL_WORK";
     public static final String PART                                     = "PART";
     public static final String PART_NUMBER                              = "PARTNUMBER";
