@@ -122,6 +122,7 @@ Summarise Changes
 #321:Ensure that when reading an mp4 box header, we have at least enough data in the file to actually read the header, if there is less data, ignore it and log a warning.
 #322:Problems writing metadata for DSF files larger than 2GB
 #329:Add support for Roon fields (and also SONGKONG_ID for SongKong)
+#331:Rename ORIGINAL_ALBUM_YEAR to ORIGINALRELEASEDATE so recognized by Roon
 
 2.2.5
 #033:Added getAudioStartPos() and getAudioEndPos() methods to AudioHeader interface and implemented for most formats
